# Cartesian-Trajectory-Controller

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  mainpage.dox  manifest.xml
ros/config/: ctc_debugging.vcg
ros/include/: CartesianTrajectoryController.h
ros/launch/: cartesian_trajectory_controller.launch  cartesian_trajectory_controller_offline.launch  cartesian_trajectory_controller_online.launch
ros/nodes/: cartesian_trajectory_controller.cpp
ros/src/: CartesianTrajectoryController.cpp
ros/test/: test_trajectories.sh
